--- a/index.css
+++ b/index.css
@@ -1,13 +1,40 @@
+html {
+    font-family: 'Coda Caption', sans-serif;
+}
 .noContainer {
-    font-size: 20px;
+    font-size: 5em;
     float:right;
+    color:teal;
 }
 
 .yesContainer {
-    font-size: 20px;
+    font-size: 5em;
     float:left;
+    color:teal;
 }
 
 .inline {
     display:inline;
+}
+
+.graph {
+    z-index:-4;
+    margin:auto;
+    width:60%;
+    margin:auto;
+    height:80px;
+    position:absolute;
+    margin-left:auto;
+    margin-right:auto;
+    left:0;
+    right:0;
+    background:orange;
+    
+}
+
+.flex {
+    display:flex;
+    background-color:pink;
+    height:100%;
+    width: 0%;
 }
