added features that thorne wanted. being able to launch software with prediction command and then hide again with endprediction and has message typed out below graph bar

--- a/index.css
+++ b/index.css
@@ -1,6 +1,15 @@
 html {
     font-family: 'Coda Caption', sans-serif;
 }
+
+#main {
+    opacity:0;
+}
+
+#questionBanner {
+    font-size:2em;
+}
+
 .noContainer {
     font-size: 5em;
     float:right;
